k8s/apps/folly/jellyfin/03-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_CLUSTER_ISSUER}
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls-gateway
      protocol: HTTPS
      port: 443
      hostname: &hostname "tv.${SECRET_DOMAIN}"
      tls:
        certificateRefs:
          - kind: Secret
            name: *hostname
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jellyfin-http
  namespace: jellyfin
spec:
  parentRefs:
    - name: jellyfin
  hostnames:
    - "tv.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: jellyfin-http
          port: 8096
